Adjust PDP sec9 hero spacing so staff figure no longer overlaps title.

--- a/mobile.css
+++ b/mobile.css
@@ -9418,19 +9418,19 @@ html.is-guide-flow-zoom-open body {
     display: block;
     position: relative;
     flex: 0 0 auto;
-    width: calc(108px * var(--sec9-m-s));
+    width: calc(96px * var(--sec9-m-s));
     height: calc(118px * var(--sec9-m-s));
-    margin-right: calc(-16px * var(--sec9-m-s));
-    overflow: visible;
+    margin-right: calc(8px * var(--sec9-m-s));
+    overflow: hidden;
     z-index: 2;
   }
 
   body.product-detail-page .sec9-contact__woman {
     position: absolute;
-    left: calc(-20px * var(--sec9-m-s));
-    top: 0;
+    left: calc(-24px * var(--sec9-m-s));
+    top: calc(12px * var(--sec9-m-s));
     bottom: auto;
-    width: calc(160px * var(--sec9-m-s));
+    width: calc(150px * var(--sec9-m-s));
     height: auto;
     max-width: none;
     margin: 0;
@@ -9445,9 +9445,9 @@ html.is-guide-flow-zoom-open body {
     left: auto;
     top: auto;
     bottom: auto;
-    width: min(74vw, calc(282px * var(--sec9-m-s)));
+    width: min(calc(100vw - 140px), calc(282px * var(--sec9-m-s)));
     max-width: calc(282px * var(--sec9-m-s));
-    margin: 0;
+    margin: 0 0 0 calc(4px * var(--sec9-m-s));
     transform: none;
     z-index: 3;
     flex: 0 0 auto;
@@ -9526,19 +9526,21 @@ html.is-guide-flow-zoom-open body {
   }
 
   body.product-detail-page .sec9-contact__woman-wrap {
-    width: calc(108px * var(--sec9-sp-s));
+    width: calc(96px * var(--sec9-sp-s));
     height: calc(118px * var(--sec9-sp-s));
-    margin-right: calc(-16px * var(--sec9-sp-s));
+    margin-right: calc(8px * var(--sec9-sp-s));
   }
 
   body.product-detail-page .sec9-contact__woman {
-    left: calc(-20px * var(--sec9-sp-s));
-    width: calc(160px * var(--sec9-sp-s));
+    left: calc(-24px * var(--sec9-sp-s));
+    top: calc(12px * var(--sec9-sp-s));
+    width: calc(150px * var(--sec9-sp-s));
   }
 
   body.product-detail-page .sec9-contact picture {
-    width: min(74vw, calc(282px * var(--sec9-sp-s)));
+    width: min(calc(100vw - 140px), calc(282px * var(--sec9-sp-s)));
     max-width: calc(282px * var(--sec9-sp-s));
+    margin-left: calc(4px * var(--sec9-sp-s));
   }
 
   body.product-detail-page .sec9-contact__panel {
